--- a/pipelines/deploy/Spark-Single-Node-Notebook-AWS/Dockerfile
+++ b/pipelines/deploy/Spark-Single-Node-Notebook-AWS/Dockerfile
@@ -8,6 +8,7 @@ RUN useradd -rm -d /home/rtdip -s /bin/bash -g root -G sudo -u 1001 rtdip
 COPY run_conda_installer.sh /home/rtdip/
 RUN mkdir -p /home/rtdip/apps/lfenergy
 COPY environment.yml /home/rtdip/apps/lfenergy/
+COPY MISO_pipeline_sample.py /home/rtdip/apps/lfenergy/
 RUN chmod +x /home/rtdip/run_conda_installer.sh
 WORKDIR /home/rtdip
 ENTRYPOINT ["/home/rtdip/run_conda_installer.sh"]
