--- a/pipelines/deploy/Spark-Single-Node-Notebook-AWS/dagster.yaml
+++ b/pipelines/deploy/Spark-Single-Node-Notebook-AWS/dagster.yaml
@@ -1,3 +1,4 @@
+# MYSQL Configuration
 scheduler:
   module: dagster.core.scheduler
   class: DagsterDaemonScheduler
@@ -6,58 +7,41 @@ run_coordinator:
   module: dagster.core.run_coordinator
   class: QueuedRunCoordinator
 
-run_launcher:
-  module: dagster_docker
-  class: DockerRunLauncher
-  config:
-    env_vars:
-      - DAGSTER_POSTGRES_USER
-      - DAGSTER_POSTGRES_PASSWORD
-      - DAGSTER_POSTGRES_DB
-    network: dagster_network
-    container_kwargs:
-      volumes: # Make docker client accessible to any launched containers as well
-        - /var/run/docker.sock:/var/run/docker.sock
-        - /tmp/io_manager_storage:/tmp/io_manager_storage
-
 run_storage:
-  module: dagster_postgres.run_storage
-  class: PostgresRunStorage
-  config:
-    postgres_db:
-      hostname: docker_example_postgresql
-      username:
-        env: DAGSTER_POSTGRES_USER
-      password:
-        env: DAGSTER_POSTGRES_PASSWORD
-      db_name:
-        env: DAGSTER_POSTGRES_DB
-      port: 5432
+ module: dagster_mysql.run_storage
+ class: MySQLRunStorage
+ config:
+  mysql_db:
+    hostname: DAGSTER_MYSQL_HOST
+    username: DAGSTER_MYSQL_USER
+    password: DAGSTER_MYSQL_PASSWORD
+    db_name: DAGSTER_MYSQL_DB
+    port: DAGSTER_MYSQL_PORT
 
-schedule_storage:
-  module: dagster_postgres.schedule_storage
-  class: PostgresScheduleStorage
-  config:
-    postgres_db:
-      hostname: docker_example_postgresql
-      username:
-        env: DAGSTER_POSTGRES_USER
-      password:
-        env: DAGSTER_POSTGRES_PASSWORD
-      db_name:
-        env: DAGSTER_POSTGRES_DB
-      port: 5432
 
 event_log_storage:
-  module: dagster_postgres.event_log
-  class: PostgresEventLogStorage
-  config:
-    postgres_db:
-      hostname: docker_example_postgresql
-      username:
-        env: DAGSTER_POSTGRES_USER
-      password:
-        env: DAGSTER_POSTGRES_PASSWORD
-      db_name:
-        env: DAGSTER_POSTGRES_DB
-      port: 5432
+ module: dagster_mysql.event_log
+ class: MySQLEventLogStorage
+ config:
+  mysql_db:
+    hostname: DAGSTER_MYSQL_HOST
+    username: DAGSTER_MYSQL_USER
+    password: DAGSTER_MYSQL_PASSWORD
+    db_name: DAGSTER_MYSQL_DB
+    port: DAGSTER_MYSQL_PORT
+
+schedule_storage:
+ module: dagster_mysql.schedule_storage
+ class: MySQLScheduleStorage
+ config:
+  mysql_db:
+    hostname: DAGSTER_MYSQL_HOST
+    username: DAGSTER_MYSQL_USER
+    password: DAGSTER_MYSQL_PASSWORD
+    db_name: DAGSTER_MYSQL_DB
+    port: DAGSTER_MYSQL_PORT
+
+
+run_launcher:
+  module: dagster.core.launcher
+  class: DefaultRunLauncher
